# jackd-jamin-gtk2

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  TODO  autogen.sh  config.h.in  configure.ac  configure.in  fix-m2s.sh  jam-ui.glade  jam-ui.gladep
controller/: Makefile.am  jamincont_1912.xml
data/: Makefile.am  jamin.desktop.in  jamin.xml.in
debian/: README.source  changelog  control  control.in  copyright  copyright_hints  examples  jamin-wrapper  jamin.install  jamin.links  rules  watch
debian-dsc/: jamin_0.98.9_git20170111_199091_repack1-1.dsc.txt
debian/patches/: 1001_use_AM_CFLAGS_for_CFLAGS.patch  1002_compile_with_-fPIC.patch  1003_add_dynamic_linking.patch  1004_install_correct_dir.patch  1005_desktop_file.patch  NEWS.patch  fix_typos.patch  series
examples/: Makefile.am  RIAA_EQ.jam  default.jam  jamin_ui.in  marble_jamin_ui.in
pixmaps/: JAMin_icon.xpm  LED_green_off.xpm  LED_green_on.xpm  LED_red.xpm  LED_yellow.xpm  Makefile.am
po/: ChangeLog  POTFILES.in  cz.po  fr.po  ru.po
src/: Makefile.am  biquad.h  callbacks.c  callbacks.h  callbacks_help.h  compressor-ui.c  compressor-ui.h  compressor.h  constants.h  db.h  debug.h  denormal-kill.h  geq.c  geq.h  gtkmeter.c  gtkmeter.h  gtkmeterscale.c  gtkmeterscale.h  hdeq.c  hdeq.h  help.c  help.h  interface.c  interface.h  intrim.c  intrim.h  io-menu.c  io-menu.h  io.c  io.h  jackstatus.h  jamin-scene.c  jamin.1  jamin.1.in  limiter-ui.c  limiter-ui.h  limiter.h  main.c  main.h  mk-stateh.pl  (+30 more)
test/files/: default-bad-numbers.jam  default-mangled.jam  default-noheader.jam  default-uncompressed.jam  default-unknown-element.jam  default-withcomment.jam  default.jam  junk.jam
