EXTRA_DIST = brushed-steel.png \
             thai-gold-knobs.png \
             thai-gold.png \
             play1.png \
             pause1.png \
             JAMin_splash.jpg \
             about_image.png \
             marble.jpg \
             JAMin_icon.xpm \
             LED_green_on.xpm \
             LED_green_off.xpm \
             LED_yellow.xpm \
             LED_red.xpm


pixmap_DATA = $(EXTRA_DIST)

pixmapdir = $(datadir)/jamin/pixmaps
